refactor: update contact info

--- a/src/app/shared/ui/layout/footer/footer.html
+++ b/src/app/shared/ui/layout/footer/footer.html
@@ -53,8 +53,19 @@
           <i class="fa fa-fw fa-map-marker"></i>
         </div>
         <div class="col-10">
-          664 A South Military Trail
-          <br> Deerfield Beach, FL 33442
+          <p class="mb-0">SOLAIYA LLLP</p>
+          <p class="mb-0">4250 N Fairfax Dr.</p>
+          <p class="mb-0">Suite 600</p>
+          <p class="mb-0">Arlington, VA 22203</p>
+        </div>
+        <div class="col-2 text-right">
+          <i class="fa fa-fw fa-map-marker"></i>
+        </div>
+        <div class="col-10">
+          <p class="mb-0">SOLAIYA CZ s.r.o.</p>
+          <p class="mb-0">Praha City Center</p>
+          <p class="mb-0">Klimentská 1216/46</p>
+          <p class="mb-0">Praha 1, 110 02</p>
         </div>
       </div>
     </div>
